--- a/sauraav-portfolio-site/sauraav-portfolio-site/Views/Shared/_Layout.cshtml
+++ b/sauraav-portfolio-site/sauraav-portfolio-site/Views/Shared/_Layout.cshtml
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - sauraav_portfolio_site</title>
+    <title>Sauraav Jayrajh - Portfolio</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/sauraav_portfolio_site.styles.css" asp-append-version="true" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         header {
             transition: transform 0.3s ease-in-out;
