--- a/sauraav-portfolio-site/sauraav-portfolio-site/wwwroot/css/projects_section.css
+++ b/sauraav-portfolio-site/sauraav-portfolio-site/wwwroot/css/projects_section.css
@@ -13,8 +13,12 @@
     overflow: hidden;
     border-radius: 0px 90px 0px 90px !important;
     min-height: 400px;
-    box-shadow: 10px 10px 0 rgba(255, 255, 255, 1);
 }
+
+    .project-preview:hover {
+        opacity: 1;
+        box-shadow: 10px 10px 0 rgba(255, 255, 255, 1) !important;
+    }
 
 .preview-content {
     position: relative;
@@ -51,6 +55,7 @@
     line-height: 1.6;
     font-family: 'gendy', sans-serif !important;
     font-weight: 500 !important;
+    padding: 1rem;
 }
 
 .projects-list {
@@ -134,6 +139,10 @@
         padding: 1rem;
     }
 
+    .project-description {
+        font-size: 0.8rem;
+    }
+
     .project-preview {
         width: 100%;
         aspect-ratio: 16/9;
@@ -180,6 +189,7 @@
         gap: 1rem;
         padding: 1rem;
         text-align: center;
+
     }
 
         .project-item:hover {
